--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -4,6 +4,11 @@
   justify-content: center;
   align-items: center;
   padding-top: 20px;
+  font-family: 'Nunito' !important;
+}
+
+*{
+  font-family: 'Nunito', sans-serif;
 }
 
 .App-logo {
@@ -39,10 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-.main{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
