--- a/pokedex/src/pages/Main/style.css
+++ b/pokedex/src/pages/Main/style.css
@@ -1,8 +1,81 @@
-.type-list{
+.type-list {
     list-style-type: none;
-    color: #000;
-    padding-left: 0px;
-    margin-top: 0px;
+    color: #FFF;
     display: flex;
-    gap: 20px;   
+    gap: 20px;
+    font-weight: 500;
+    margin: 0px 60px 10px 30px;
+    width: 100%;
+    justify-content: center;
+}
+
+.type{
+    font-size: 16px;
+    font-weight: 700;
+    color:#000;
+    text-align: center;
+}
+
+.pokemon-img {}
+
+.details {
+    width: 100%;
+}
+
+.pokemon-name {
+    margin-right: 25px;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding-top: 70px;
+}
+
+.input-search {
+    margin-top: 20px;
+    width: 255px;
+    margin-left: 10px;
+    padding: 5px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    outline: none;
+}
+
+.btn-search {
+    background: #d30a40;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    outline: none;
+    border: none;
+    color: #FFF;
+    border-radius: 8px;
+    width: 80px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    align-self: end;
+    margin-right: 73px;
+    margin-top: 40px;
+    transition: .3s ease-in;
+    font-weight: 600;
+}
+.btn-search:hover{
+    background: #FFF;
+    color: #d30a40;
+    
+}
+
+.details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
