--- a/pokedex/src/pages/Main/style.css
+++ b/pokedex/src/pages/Main/style.css
@@ -4,16 +4,20 @@
     display: flex;
     gap: 20px;
     font-weight: 500;
-    margin: 0px 60px 10px 30px;
+    margin: 0px;
     width: 100%;
     justify-content: center;
+    padding-right: 58px;
+    padding-left: 25px;
 }
 
-.type{
+.type {
     font-size: 16px;
     font-weight: 700;
-    color:#000;
+    color: #000;
     text-align: center;
+    padding-right: 58px;
+    padding-left: 25px;
 }
 
 .pokemon-img {}
@@ -65,10 +69,11 @@
     transition: .3s ease-in;
     font-weight: 600;
 }
-.btn-search:hover{
+
+.btn-search:hover {
     background: #FFF;
     color: #d30a40;
-    
+
 }
 
 .details-container {
